--- a/src/Components/ProductDetails/ProductDetails.module.css
+++ b/src/Components/ProductDetails/ProductDetails.module.css
@@ -2,12 +2,9 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  /* justify-content: center; */
-  /* align-items: center; */
   transform: translate(-50%, 0);
   left: 50%;
   width: 80vw;
-  /* margin-top: 20px; */
   background-color: bisque;
   padding: 50px;
   text-align: center;
@@ -19,23 +16,15 @@
 h1 {
   text-align: left !important;
 }
-.details img {
-  /* display: block; */
-  /* background-color: rgba(0, 0, 0, 0.3); پس‌زمینه نیمه‌شفاف */
 
-  /* position: relative;
-  left: 50%;
-  transform: translate(-50%, 0); */
-}
 .imagebox {
-  display: block; /* بعضی مواقع برای تگ‌های div لازمه */
-
+  display: block;
   position: relative;
   width: 300px;
   height: 300px;
   left: 50%;
   background-position: center;
-  background-size: contain; /* تصویر رو داخل کادر نگه می‌داره */
+  background-size: contain;
   background-repeat: no-repeat;
   transform: translate(-50%, 0);
 }
@@ -44,5 +33,3 @@ h1 {
   justify-content: space-around;
   width: 100%;
 }
-
-
